--- a/run_sampler_test.ipynb
+++ b/run_sampler_test.ipynb
@@ -2,20 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n"
+     ]
+    }
+   ],
    "source": [
     "from visualization import plot_dg, visualize_sampler_run"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -37,7 +45,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.lib.display.IFrame at 0x7fbfc0e49f70>",
+      "text/plain": "<IPython.lib.display.IFrame at 0x7f27028adfd0>",
       "text/html": "\n        <iframe\n            width=\"100%\"\n            height=\"1000\"\n            src=\"http://127.0.0.1:8001/\"\n            frameborder=\"0\"\n            allowfullscreen\n            \n        ></iframe>\n        "
      },
      "metadata": {},
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "outputs": [],
    "source": [],
    "metadata": {
