--- a/run_sampler_test.ipynb
+++ b/run_sampler_test.ipynb
@@ -18,7 +18,7 @@
     }
    ],
    "source": [
-    "from visualization import plot_dg, visualize_sampler_run"
+    "from visualization import plot_dg, visualize_sampler_run, supervise_3d_complex_app"
    ]
   },
   {
@@ -29,23 +29,34 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "@> 1849 atoms and 1 coordinate set(s) were parsed in 0.01s.\n",
+      "@> 26 atoms and 1 coordinate set(s) were parsed in 0.00s.\n"
+     ]
+    }
+   ],
    "source": [
-    "app = visualize_sampler_run(0)"
+    "app = supervise_3d_complex_app(\n",
+    "    pdb_name='6fff',\n",
+    "    folder_complexes='/home/giacomo/Documents/LCP_runs/RUN_1/docking/complexes',\n",
+    "    json_file='/home/giacomo/Documents/LCP_runs/RUN_1/docking_res.json',\n",
+    "    color_col='step',\n",
+    "    smiles_col='smiles',\n",
+    "    title_col='id'\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [
     {
      "data": {
-      "text/plain": "<IPython.lib.display.IFrame at 0x7f27028adfd0>",
+      "text/plain": "<IPython.lib.display.IFrame at 0x7f9f208a1370>",
       "text/html": "\n        <iframe\n            width=\"100%\"\n            height=\"1000\"\n            src=\"http://127.0.0.1:8001/\"\n            frameborder=\"0\"\n            allowfullscreen\n            \n        ></iframe>\n        "
      },
      "metadata": {},
@@ -54,7 +65,25 @@
    ],
    "source": [
     "app.run_server(mode='inline', port=8001, height=1000)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
